Fixed layout bug and changed the name of a control from storybook.

--- a/TemperatureControl/TemperatureControl.module.less
+++ b/TemperatureControl/TemperatureControl.module.less
@@ -13,4 +13,8 @@
 		height: 100%;
 		width: 100%;
 	}
+
+	.textContainer {
+		white-space: nowrap;
+	}
 }
